# claude1

./: .clang-tidy  BUILD_MACOS.md  CLAUDE.md  CMakeLists.txt  Doxyfile.in  README.md
.claude/: settings.local.json
.github/: CICD_PLAN.md  README.md  STATIC_ANALYSIS.md  VALIDATION.md
.github/workflows/: benchmark-report.yml  build-test.yml  clang-tidy-fix.yml  coverage-enforcement.yml  coverage-report.yml  cross-compile.yml  deploy-docs.yml  multi-compiler-validation.yml  static-analysis-enforcement.yml  static-analysis.yml
benchmark/: CMakeLists.txt  bench_driver.cpp  bench_ringbuffer.cpp  bench_staticvector.cpp
cmake/: Doxygen.cmake  LibembConfig.cmake  Validation.cmake
cmake/toolchains/: abov-a31g123.cmake  arm-none-eabi.cmake
coverage_report/: cmd_line  index.html
docs/: ADDING_DRIVERS.md  ADDING_MOCKS.md  ARCHITECTURE.md  HARDWARE_TEST_GUIDE_I2C_DISPLAY.md  HARDWARE_TEST_GUIDE_LED_BLINK.md  HARDWARE_TEST_GUIDE_UART_ECHO.md  PERFORMANCE_GUIDE.md  PHASE_4_COMPLETION_SUMMARY.md  PORTING_ABOV_A31G123.md  PORTING_MCU.md  README.md  TESTING_STRATEGY.md  TROUBLESHOOTING_ABOV_A31G123.md
examples/: CMakeLists.txt  README.md
examples/01_basic_ringbuffer/: CMakeLists.txt  README.md
examples/02_uart_ringbuffer/: CMakeLists.txt  NonBlockingUart.hpp  README.md
examples/03_display_driver/: CMakeLists.txt  README.md  main.cpp
examples/04_sensor_integration/: CMakeLists.txt  README.md  main.cpp
examples/05_abov_a31g123_demo/: CMakeLists.txt  README.md  blink.cpp  i2c_display.cpp  uart_echo.cpp
examples/host_demo/: CMakeLists.txt  main.cpp
examples/uart_ringbuffer/: CMakeLists.txt  main.cpp
include/libemb/bare-metal/: assert.h  stddef.h  stdint.h
include/libemb/driver/: Ssd1306.hpp
include/libemb/driver/ssd1306/: Ssd1306.hpp  Ssd1306Types.hpp  config.cmake
include/libemb/hal/: CMakeLists.txt  IGpio.hpp  II2c.hpp  ISpi.hpp  IUart.hpp
include/libemb/util/: CMakeLists.txt  RingBuffer.hpp  StaticVector.hpp
port/abov_a31g123/: CMakeLists.txt
port/abov_a31g123/common/: A31G123Config.hpp  A31G123Registers.hpp  SystemClock.cpp
port/abov_a31g123/hal/: A31G123Gpio.cpp  A31G123Gpio.hpp  A31G123I2c.cpp  A31G123I2c.hpp  A31G123Spi.cpp  A31G123Spi.hpp  A31G123Uart.cpp  A31G123Uart.hpp
port/abov_a31g123/linker/: A31G123.ld
port/mock/: CMakeLists.txt  MockGpio.hpp  MockUart.hpp
port/mock/hal/: MockI2c.hpp
scripts/: analyze_benchmarks.sh  apply_clang_tidy_fixes.sh  check_coverage.sh  generate_coverage.sh  local_strict_validation.sh  quick_validation.sh  run_benchmarks.sh  run_static_analysis.sh
src/driver/: CMakeLists.txt  Ssd1306.cpp
src/driver/ssd1306/: Ssd1306.cpp
src/protocol/: CMakeLists.txt
test/: CMakeLists.txt
test/fixtures/: CMakeLists.txt
test/unit/: CMakeLists.txt  test_Ssd1306.cpp
test/unit/driver/: CMakeLists.txt  test_Ssd1306.cpp
test/unit/util/: CMakeLists.txt  test_RingBuffer.cpp
